# flask-pony-example

./: .gitignore  README.md  README.rst  dev_requirements.txt  pyproject.toml  setup.py
pony_blog/: __init__.py  auth.py  blog.py
pony_blog/templates/: base.html
pony_blog/templates/blog/: index.html  update.html
src/PonyBlog/: blog.py
