[project]
name='PonyBlog'
version='1.0.0'
description='The basic blog app built in the Flask tutorial with Pony ORM integration.'
license = {text = 'MIT License'}
requires-python = ">=3.10"
dependencies = [
    'Flask',
    'pony'
]


[tool.setuptools.packages.find]
where = ['src']
include = ['PonyBlog']


[tool.setuptools.package-data]
PonyBlog = [
    "static/*",
    "templates/*",
    "templates/auth/*",
    "templates/blog/*",
]


[build-system]
requires = [
    'setuptools >= 61.0'
]
build-backend = 'setuptools.build_meta'